--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,54 @@
+asn1crypto==0.24.0
+beautifulsoup4==4.9.3
+bunch==1.0.1
+certifi==2020.11.8
+chardet==3.0.4
+click==7.1.2
+cryptography==2.6.1
+cssselect==1.1.0
 dateparser==0.7.4
+decorator==4.4.2
+entrypoints==0.3
+feedfinder2==0.0.4
+feedparser==6.0.2
+filelock==3.0.12
+future==0.18.2
+idna==2.10
+jieba3k==0.35.1
+joblib==0.17.0
+jsonpath-ng==1.5.2
+keyring==17.1.1
+keyrings.alt==3.1.1
+langid==1.1.6
+lxml==4.5.0
+newspaper3k==0.2.8
+nltk==3.5
+numpy==1.19.4
+Pillow==8.0.1
+ply==3.11
+psycopg2==2.8.6
+pycrypto==2.6.1
+PyGObject==3.30.4
 python-dateutil==2.8.1
 pytz==2020.1
+pyxdg==0.25
+PyYAML==5.3.1
 regex==2020.5.14
+requests==2.25.0
+requests-file==1.5.1
+SecretStorage==2.3.1
+sgmllib3k==1.0.0
+simplejson==3.17.2
 six==1.14.0
+soupsieve==2.0.1
+SQLAlchemy==1.3.20
+tinysegmenter==0.3
+tldextract==3.1.0
+tqdm==4.54.0
 tzlocal==2.1
-lxml==4.5.0
-langid
-requests
-newspaper3k
-simplejson
-jsonpath-ng
-ujson
-simplejson
-bunch
-url_normalize==1.3.3
+ujson==4.0.1
 uritools==3.0.0
+url-normalize==1.3.3
+urllib3==1.26.2
+warcio==1.7.4
+wget==3.2
