--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  python-tests:
 
     runs-on: ubuntu-latest
 
@@ -32,3 +32,15 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+
+  docker-db:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name:
+      run: |
+        cd docker
+        docker build -t db .
+        docker run --name db -e POSTGRES_PASSWORD=password db
+        docker stop db
