--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,9 +8,7 @@ on:
 
 jobs:
   python-tests:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
@@ -33,14 +31,13 @@ jobs:
       run: |
         pytest
 
-  docker-db:
+  docker:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
-    - name:
+    - name: db
       run: |
         cd docker
         docker build -t db .
-        docker run --name db -e POSTGRES_PASSWORD=password db
+        docker run --name db -e POSTGRES_PASSWORD=password -d db
         docker stop db
