add test_content.py; fix many minor bugs in content extraction

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 *.pyc
 __pycache__
+*.pickle
 
 nohup.*
 log
@@ -20,3 +21,4 @@ merge_steps.sh
 golden.jsonl
 golden_full.jsonl
 tests/.golden_full
+geckodriver.log
