fix bug in generate_tests_json.py caused by new content tests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,3 +30,6 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    - name: Run scripts
+      run: |
+        python3 scripts/generate_tests_json.py
