--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,14 @@ golden.jsonl
 golden_full.jsonl
 tests/.golden_full
 geckodriver.log
+
+*.aux
+*.pdf
+*.dvi
+*.blg
+*.fdb_latexmk
+*.fls
+*.log
+*.out
+*.bbl
+
